Closed Bug 271047 Opened 21 years ago Closed 21 years ago

row group reflow triggers ###!!! ASSERTION: Computed overflow area must contain frame bounds

Categories

(Core :: Layout: Tables, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bernd_mozilla, Assigned: bernd_mozilla)

References

Details

(Keywords: testcase)

Attachments

(3 files)

load attahed testcase into a debug build see the assertion the aReflowState.availableWidth contains a negative width, which leads to a overflow area with a negative width...
Attached file testcase
I tried to make the testcase strict and validating.., the validator as mozilla does not like a script at this place
*** Bug 266753 has been marked as a duplicate of this bug. ***
taking
Assignee: nobody → bernd_mozilla
Attached patch patchSplinter Review
Attachment #178056 - Flags: superreview?(roc)
Attachment #178056 - Flags: review?(roc)
Am I missing something or does this guarantee that availSize.width is always *at most* zero?
yep thats the intention
You are guaranteeing that the available width/height is always negative or zero. That can't be what you really want.
My debugger tells me something different ;-). The patch could be also translated into: don't substract more than you have scenario a: availWidth > padding +spacing substract padding and spacing scenario b: availWidth < padding +spacing substract only the availWidth and get a zero I can of course also add a clean availWidth = PR_MAX(0, availWidth); if that is more obvious.
Comment on attachment 178442 [details] [diff] [review] more obvious patch that's much clearer :-)
Attachment #178442 - Flags: superreview+
Attachment #178442 - Flags: review+
Attachment #178056 - Flags: superreview?(roc)
Attachment #178056 - Flags: superreview-
Attachment #178056 - Flags: review?(roc)
Attachment #178056 - Flags: review-
fix checked in
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: