prevent negative available widths for rowgroups when changing from an empty table to one with cells and cellspacing, bug 271047 r/sr=roc